# mail_validator

GUC-mail-validator/: README.md  pyproject.toml
GUC-mail-validator/server/server/: settings.py  urls.py
GUC-mail-validator/server/validator/: serializers.py  urls.py  views.py
