[tool.poetry]
name = "guc-mail-validator"
version = "0.1.0"
description = ""
authors = ["Ibrahim Soltan <ibrahim.soltan918@gmail.com>"]
readme = "README.md"
packages = [{include = "guc_mail_validator"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
